// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`authen-local-passport should be true for valid email 1`] = `true`;

exports[`authen-local-passport should be true for valid email and password 1`] = `true`;

exports[`authen-local-passport should be true for valid password 1`] = `true`;

exports[`authen-local-passport should redirect non exist token to /auth/error/token-not-exist 1`] = `"/auth/error/token-not-exist"`;

exports[`authen-local-passport should redirect null token to /auth/error/token-not-provided 1`] = `"/auth/error/token-not-provided"`;

exports[`authen-local-passport should redirect valid token to /auth/verified 1`] = `"/auth/verified"`;

exports[`authen-local-passport should reset password if user exist 1`] = `
Object {
  "_id": "592c0bb4484d740e0e73798b",
  "email": "foo@bar.com",
  "role": "user",
  "token": "aa90f9ca-ced9-4cad-b4a2-948006bf000d",
}
`;

exports[`authen-local-passport should signup new user and return user data 1`] = `
Object {
  "_id": "592c0bb4484d740e0e73798b",
  "foo": "bar",
  "role": "user",
}
`;
